# wedme-plots

./: .deploy.sh  .gitignore  README.md  pyproject.toml
demo/: double_x_scale.ipynb
src/wedme/: __init__.py  common.mplstyle  const.py  elspaper.mplstyle  gif.py  saving.py  slides.mplstyle  umppt.mplstyle  util.py
src/wedme/stylesheets/: a0.mplstyle  elspaper.mplstyle  slides.mplstyle
tests/: apply.py  context.py  main.py
