[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wedme-plots"
version = "1.6.1"
description = "We Don't Make Embarrassing Plots. Matplotlib styles for papers, posters and presentations."
readme = "README.md"
authors = [{ name = "Martijn Ruijzendaal", email = "martijn.ruijzendaal@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["matplotlib"]
dependencies = ["matplotlib"]
requires-python = ">=3.7"

    [project.optional-dependencies]
    build = ["build", "twine"]
    dev   = ["black", "bumpver", "isort", "mypy", "pytest"]

    [project.urls]
    repository    = "https://github.com/mruijzendaal/wedme-plots"
    documentation = "https://github.com/mruijzendaal/wedme-plots"


# [tool.bumpver]
# current_version = "1.6"
# version_pattern = "MAJOR.MINOR.PATCH"
# commit_message  = "bump version {old_version} -> {new_version}"
# commit          = true
# tag             = true
# push            = false
#
#     [tool.bumpver.file_patterns]
#     "pyproject.toml" = [
#         'current_version = "{version}"',
#         'version = "{version}"',
#     ]
#     "src/wedme/__init__.py" = ["{version}"]
# 
# [tool.isort]
# profile                   = "black"
# import_heading_stdlib     = "Standard library imports"
# import_heading_thirdparty = "Third party imports"
# import_heading_firstparty = "WEDME imports"
# 
# [tool.mypy]
# strict = true
# 
#     [[tool.mypy.overrides]]
#     module                 = "wedme"
#     ignore_missing_imports = true
# 